# drf-auth

./: README.md  pyproject.toml
drive/: cred.txt  docker-compose.yml  requirements.txt
drive/drive/: settings.py  urls.py
