[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["yousef-alramli <ysabdys1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
black = "^21.12b0"
flake8 = "^4.0.1"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
